# smuro_imitation

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/: data-following.txt
include/smuro_imitation/synchrocontroller/: synchrocontroller.h
launch/: filemotiontest.launch  imitation.launch  motiontest.launch  uimotion.launch
scripts/: messagePublisher.py
src/: synchronode.cpp
src/synchrocontroller/: synchrocontroller.cpp
